--- a/web_html/03_html_link_image.html
+++ b/web_html/03_html_link_image.html
@@ -1,6 +1,15 @@
 <html>
 	<title> 나의 웹 페이지 </title>
 	<body>
+	<a href="https://www.google.com">구글</a><br>
+	<a href="https://www.naver.com">네이버</a><br>
+	<a href="https://www.daum.net">다음</a><br>
+	<a href="https://www.youtube.com" target="_blank">유튜브</a><br>
 	
+	<h1>내가 좋아하는 동물</h1>
+	<a href="https://unsplash.com/photos/73pyV0JJOmE" target="_blank">
+		<img src="photo-1576201836106-db1758fd1c97.jpeg" width=300 height=300
+		alt="image not found">
+	</a><br> 	
 	</body>
 </html>
