--- a/web_html/03_html_link_image.html
+++ b/web_html/03_html_link_image.html
@@ -11,5 +11,11 @@
 		<img src="photo-1576201836106-db1758fd1c97.jpeg" width=300 height=300
 		alt="image not found">
 	</a><br> 	
+	
+	<h2>멋진 사진</h2>
+	<a href="https://unsplash.com/photos/OHOU-5UVIYQ" target="_blank">
+		<img src="photo-1517976487492-5750f3195933.jpeg" width=400 height=400
+		alt="image not found">
+	</a><br> 	
 	</body>
 </html>
