--- a/03_mission/01_main.html
+++ b/03_mission/01_main.html
@@ -1,18 +1,25 @@
 <html>
+	<head>
 	<title>나를 소개합니다!</title>
+	</head>
+
 	<body>
 		<ol>
-			<h1 style="background-color:Tomato;color:white">
+			<h1 id="h1">
 			<a href="file:///D:/GitHub/GitHub/LikeLion_13th_DataCourse/mission_introuce/02_myself.html">나의 자기 소개
 			</h1>
+			
 			<br>
-			<h1 style="background-color:Orange;color:white">
+			
+			<h2 id="h2">
 			<a href="file:///D:/GitHub/GitHub/LikeLion_13th_DataCourse/mission_introuce/03_myfavorite.html">내가 좋아하는 것들
-			</h1>
+			</h2>
+			
 			<br>
-			<h1 style="background-color:SlateBlue;color:white">
+			
+			<h3 id="h3">
 			<a href="file:///D:/GitHub/GitHub/LikeLion_13th_DataCourse/mission_introuce/04_mytodolist.html">나의 TODO List
-			</h1>
-	</ol>
+			</h3>
+		</ol>
 	</body>
 </html>
