--- a/03_mission/01_main.html
+++ b/03_mission/01_main.html
@@ -6,19 +6,19 @@
 	<body>
 		<ol>
 			<h1 id="h1">
-			<a href="file:///D:/GitHub/GitHub/LikeLion_13th_DataCourse/mission_introuce/02_myself.html">나의 자기 소개
+			<a href="02_myself.html">나의 자기 소개
 			</h1>
 			
 			<br>
 			
 			<h2 id="h2">
-			<a href="file:///D:/GitHub/GitHub/LikeLion_13th_DataCourse/mission_introuce/03_myfavorite.html">내가 좋아하는 것들
+			<a href="03_myfavorite.html">내가 좋아하는 것들
 			</h2>
 			
 			<br>
 			
 			<h3 id="h3">
-			<a href="file:///D:/GitHub/GitHub/LikeLion_13th_DataCourse/mission_introuce/04_mytodolist.html">나의 TODO List
+			<a href="04_mytodolist.html">나의 TODO List
 			</h3>
 		</ol>
 	</body>
