--- a/03_mission/01_main.html
+++ b/03_mission/01_main.html
@@ -1,14 +1,49 @@
-<html>
-	<head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
 	<title>나를 소개합니다!</title>
-	</head>
+	<style>
+
+		body {
+			background-image: url("자기소개.jpg");
+			background-repeat: no-repeat;
+			background-size: cover;
+		}
+
+		#h1 {
+				border-left: 7px solid blue;
+				color: white;
+				vertical-align: baseline;
+		}
+
+		#h2 {
+				border-left: 7px solid red;
+				color: white;
+				vertical-align: baseline;
+		}
+
+		#h3 {
+				border-left: 7px solid green;
+				color: white;
+				vertical-align: baseline;
+		}
+
+		#h4 {
+				border-left: 7px solid yellow;
+				color: white;
+				vertical-align: baseline;
+		}
+
+	</style>
+</head>
 
 	<body>
-		<ol>
+		<ol class="ol1">
 			<h1 id="h1">
-			<a href="02_myself.html">나의 자기 소개
+			<a href="02_myself.html">나의 자기 소개 </a>
 			</h1>
-			
+
 			<br>
 			
 			<h2 id="h2">
@@ -20,6 +55,11 @@
 			<h3 id="h3">
 			<a href="04_mytodolist.html">나의 TODO List
 			</h3>
+
+			<h4 id="h4">
+			<a href="14_img_gallery.html">나의 이미지 갤러리
+			</h4>
+
 		</ol>
 	</body>
 </html>
