--- a/03_mission/02_myself.html
+++ b/03_mission/02_myself.html
@@ -1,7 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
 	<title>
 	나의 자기소개
 	</title>
+</head>
 <body>
 	<a href="https://unsplash.com/photos/iY6QMkP66mI" target="_blank">
 	<img src="hello.jpeg" width=450 height=450><br> </a>
