--- a/03_mission/03_myfavorite.html
+++ b/03_mission/03_myfavorite.html
@@ -1,7 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
 	<title>
 	내가 좋아하는 것들
 	</title>
+</head>
 <body>
 	<h1 style="border:2px solid Tomato;">음식</h1>
 	<br>
