--- a/03_mission/04_mytodolist.html
+++ b/03_mission/04_mytodolist.html
@@ -1,7 +1,11 @@
-<html>
-<title>
-	나의 TODO List
-</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+	<title>
+		나의 TODO List
+	</title>
+</head>
 <body>
 	<p style="background-color:DodgerBlue;color:white">해보고 싶은 운동</p>
 	<br>
